# dashboard

./: .env.sample  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: CODEOWNERS  ci.yml  lint.yml
floto/: FlotoAuthBackend.py  apps.py  asgi.py  celery.py  context_processors.py  settings.py  urls.py  util.py  wsgi.py
floto/api/: __init__.py  admin.py  apps.py  auth.py  balena.py  filters.py  keycloak.py  kubernetes.py  models.py  openapi.py  permissions.py  serializers.py  tasks.py  urls.py  util.py  views.py
floto/api/migrations/: 0001_initial.py  0002_add_collection.py  0002_application_is_public_job_is_public_and_more.py  0003_alter_collectiondevice_device_uuid.py  0003_jobdevice_device_uuid_and_more.py  0004_alter_collectiondevice_collection_uuid_and_more.py  0004_alter_collectiondevice_device_uuid.py  0005_project.py  0006_alter_project_members_devicedata.py  0007_application_created_by_project_and_more.py  0008_fleet_devicedata_fleet.py  0009_fleet_is_app_fleet.py  0010_devicedata_created_at.py  0013_alter_serviceperipheral_service_serviceport.py  (+14 more)
floto/auth/: admin.py  apps.py  keycloak.py  middleware.py  models.py  tests.py
floto/dashboard/: apps.py  forms.py  urls.py  util.py  views.py
floto/static/: apikey.js  applications.js  data.js  device.js  devices.js  environment_component.js  job.js  jobs.js  main.css  overview.js  services.js  timing_component.js  user.js  util.js
floto/templates/: base.html  default.html  footer.html  header.html  index.html  messages.html
(+17 files in other folders)
